--- a/ShowMeTheDiff/ShowMeTheDiff.csproj
+++ b/ShowMeTheDiff/ShowMeTheDiff.csproj
@@ -52,7 +52,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Diff.cs" />
+    <Compile Include="MainLines.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainLines.Designer.cs">
+      <DependentUpon>MainLines.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="showDiffLines.cs" />
     <Compile Include="ShowMeTheDiff.cs" />
     <Compile Include="ShowMeTheDiffPackage.cs" />
     <Compile Include="UseThisLineInstead.cs" />
@@ -70,6 +77,7 @@
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
+    <Content Include="Resources\showDiffLines.png" />
     <Content Include="Resources\ShowMeTheDiff.png" />
     <Content Include="Resources\ShowMeTheDiffPackage.ico" />
     <Content Include="Resources\UseThisLineInstead.png" />
