--- a/ShowMeTheDiff/ShowMeTheDiff.csproj
+++ b/ShowMeTheDiff/ShowMeTheDiff.csproj
@@ -69,12 +69,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="dealWithLines.cs" />
     <Compile Include="Diff.cs" />
+    <Compile Include="HandlePatch.cs" />
     <Compile Include="MainLines.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="MainLines.Designer.cs">
       <DependentUpon>MainLines.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MoreLineDetails.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MoreLineDetails.Designer.cs">
+      <DependentUpon>MoreLineDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="showDiffLines.cs" />
@@ -96,12 +104,19 @@
       <ResourceName>Menus.ctmenu</ResourceName>
       <SubType>Designer</SubType>
     </VSCTCompile>
+    <EmbeddedResource Include="MainLines.resx">
+      <DependentUpon>MainLines.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MoreLineDetails.resx">
+      <DependentUpon>MoreLineDetails.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Resources\32SQLite.Interop.dll" />
     <EmbeddedResource Include="Resources\64SQLite.Interop.dll" />
     <Content Include="Resources\showDiffLines.png" />
     <Content Include="Resources\ShowMeTheDiff.png" />
     <Content Include="Resources\ShowMeTheDiffPackage.ico" />
     <Content Include="Resources\UseThisLineInstead.png" />
+    <Content Include="Resources\VSPackage1.ico" />
     <Content Include="stylesheet.css" />
   </ItemGroup>
   <ItemGroup>
