--- a/ShowMeTheDiff/ShowMeTheDiff.csproj
+++ b/ShowMeTheDiff/ShowMeTheDiff.csproj
@@ -69,9 +69,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="dealWithLines.cs" />
     <Compile Include="Diff.cs" />
-    <Compile Include="HandlePatch.cs" />
     <Compile Include="MainLines.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -85,6 +83,7 @@
       <DependentUpon>MoreLineDetails.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RelativeDate.cs" />
     <Compile Include="showDiffLines.cs" />
     <Compile Include="ShowMeTheDiff.cs" />
     <Compile Include="ShowMeTheDiffPackage.cs" />
@@ -112,6 +111,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Resources\32SQLite.Interop.dll" />
     <EmbeddedResource Include="Resources\64SQLite.Interop.dll" />
+    <Content Include="Resources\refresh.png" />
     <Content Include="Resources\showDiffLines.png" />
     <Content Include="Resources\ShowMeTheDiff.png" />
     <Content Include="Resources\ShowMeTheDiffPackage.ico" />
